--- a/index.html
+++ b/index.html
@@ -17,33 +17,36 @@
 
 <body>
   <!-------------------------------- Navbar ------------------------------------------>
-  <header class="menu">
-    <nav class="navbar navbar-expand-lg h-100">
-      <div class="container-fluid">
-        <a class="navbar-brand me-0 ms-5" href="#">Periféricos Gamer</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0 ms-auto me-5">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">¿Qué es?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Información</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">¿Dónde comprar?</a>
-            </li>
-          </ul>
+  <div class="row">
+    <header class="menu">
+      <nav class="navbar navbar-expand-lg h-100">
+        <div class="container-fluid">
+          <a class="navbar-brand me-0 ms-5" href="#">Periféricos Gamer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto me-5">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">¿Qué es?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Información</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">¿Dónde comprar?</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
+  </div>
 
   <!----------------------------------- Slider --------------------------------------->
 
@@ -65,64 +68,104 @@
       </div>
     </div>
   </div>
-<!----------------------------------- main --------------------------------------->
-<section class="container justify-content-center">
-  <h1 class="titulo">Periféricos para jugar</h1>
-  <div class="container tarjetas">
-    <div class="card" style="width: 25rem;">
-      <img src="IMG/1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4>Monitor</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-  
-    <div class="card" style="width: 25rem;">
-      <img src="IMG/2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4>Teclado</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-  
-    <div class="card" style="width: 25rem;">
-      <img src="IMG/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4>Mouse</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-  
-    <div class="card" style="width: 25rem;">
-      <img src="IMG/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4>Silla</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-  
-    <div class="card" style="width: 25rem;">
-      <img src="IMG/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4>Mousepad</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-  
-    <div class="card" style="width: 25rem;">
-      <img src="IMG/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4>Audifonos</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-  </div>
+  <!----------------------------------- main --------------------------------------->
 
-  <div class="container resumen">
-    <h3 >¿Periféricos gamer?</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ipsa. Vitae dolore, adipisci quidem esse alias tempora libero dolorum recusandae dicta deserunt nulla nostrum suscipit non aliquam illo incidunt id.</p>
+  <div class="container">
+    <div class="row">
+      <section class="main justify-content-center col-12 col-lg-8">
+        <h1 class="titulo_main">Periféricos para jugar</h1>
+        <div class="container tarjetas">
+          <div class="card" style="width: 20rem;">
+            <img src="IMG/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4>Monitor</h4>
+              <p class="fecha">1 de Enero del 2024</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="IMG/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4>Teclado</h4>
+              <p class="fecha">1 de Enero del 2024</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="IMG/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4>Mouse</h4>
+              <p class="fecha">1 de Enero del 2024</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="IMG/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4>Silla</h4>
+              <p class="fecha">1 de Enero del 2024</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="IMG/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4>Mousepad</h4>
+              <p class="fecha">1 de Enero del 2024</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="IMG/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4>Audifonos</h4>
+              <p class="fecha">1 de Enero del 2024</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container resumen">
+          <div class="titulo-resumen">
+            <h3>¿Periféricos gamer?</h3>
+          </div>
+          <div class="resumen">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ipsa. Vitae dolore, adipisci quidem esse
+              alias tempora libero dolorum recusandae dicta deserunt nulla nostrum suscipit non aliquam illo incidunt id.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <aside class="row col-md-4">
+        <div class="widget redes-sociales">
+          <div class="titulo-seccion">
+            <h3 class="titulo_aside">Síguenos!</h3>
+          </div>
+          <div class="redes_sociales">
+            <a href="https://www.youtube.com/channel/UCwyUB3k6NQb9zb8BGczmDDQ" class="youtube" target="_blank"><img src="IMG/Youtube-negro.svg" alt="youtube-icon" class="youtube-icon" >
+
+              <img src="IMG/boton-youtube.svg" alt="youtube-icon" class="youtube2-icon" ></a>
+
+            <a href="https://www.instagram.com/nicolaskeys8/" class="instagram" target="_blank"><img src="IMG/instagram-negro.svg" alt="Icon-instagram" class="instagram-icon">
+
+              <img src="IMG/instagram.svg" alt="Icon-instagram" class="instagram2-icon"></a>
+          </div>
+        </div>
+      </aside>
+    </div>
   </div>
-</section>
 
 
 </body>
