--- a/single.html
+++ b/single.html
@@ -40,101 +40,33 @@
     </div>
   </nav>
   <!----------------------------------- Slider --------------------------------------->
-  <div class="slider">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="IMG/pro1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="IMG/pro2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="IMG/pro3.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="IMG/4.jpg" class="d-block w-100" alt="...">
-        </div>
-      </div>
-    </div>
-  </div>
+
+  
   <!----------------------------------- main --------------------------------------->
 
   <div class="container" id="Perifericos">
-    
-        <div class="container tarjetas">      
-          <div class="card" style="width: 20rem;">
-            <a href=""><img src="IMG/1.jpg" class="card-img-top" alt="..."></a>
+    <div class="row justify-content-center">
+      <section class="main justify-content-center col-12 col-lg-8">
+        <h1 class="titulo_main">Periféricos para jugar</h1>
+        <div class="container tarjetas">
+
+
+          <div class="card col-sm-12">
+            <img src="IMG/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h4>Monitor</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <div class="texto">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae eligendi modi quisquam nemo quas, porro cupiditate repellat repellendus ab nobis eveniet eaque libero dolor quam adipisci dolorem expedita suscipit. Consequatur.</p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem officiis repellat ad, ea adipisci ratione, itaque unde quam ab eum velit repellendus perferendis cum veniam totam cupiditate eos provident at?</p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur aliquid ducimus eveniet dolorum provident laudantium, pariatur iste sunt aperiam harum architecto id, et culpa esse quam non nesciunt cumque nulla!</p>
+              </div>
             </div>
           </div>
 
-          <div class="card" style="width: 20rem;">
-            <a href=""><img src="IMG/2.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h4>Teclado</h4>
-              <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 20rem;">
-            <a href=""><img src="IMG/3.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h4>Mouse</h4>
-              <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 20rem;">
-            <a href=""><img src="IMG/4.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h4>Silla</h4>
-              <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 20rem;">
-            <a href=""><img src="IMG/5.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h4>Mousepad</h4>
-              <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 20rem;">
-            <a href=""><img src="IMG/6.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h4>Audifonos</h4>
-              <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="container resumen" id="Informacion">
-          <div class="titulo-resumen">
-            <h3>¿Periféricos gamer?</h3>
-          </div>
-          <div class="resumen">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ipsa. Vitae dolore, adipisci quidem esse
-              alias tempora libero dolorum recusandae dicta deserunt nulla nostrum suscipit non aliquam illo incidunt
-              id.
-            </p>
-          </div>
-        </div>
       </section>
 
       <aside class="row col-lg-4 col-md-12 mb-5">
