--- a/index.html
+++ b/index.html
@@ -17,26 +17,24 @@
 
 <body>
   <!-------------------------------- Navbar ------------------------------------------>
-  <div class="row">
+  <div class=" menu-nav" id="inicio">
     <header class="menu">
       <nav class="navbar navbar-expand-lg h-100">
         <div class="container-fluid">
-          <a class="navbar-brand me-0 ms-5" href="#">Periféricos Gamer</a>
+          <a class="navbar-brand" href="#">Periféricos Gamer</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto me-5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" href="#informacion">Información</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Información</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">¿Dónde comprar?</a>
+                <a class="nav-link" href="#comprar">¿Dónde comprar?</a>
               </li>
             </ul>
           </div>
@@ -70,7 +68,7 @@
   <div class="container">
     <div class="row">
       <section class="main justify-content-center col-12 col-lg-8">
-        <h1 class="titulo_main">Periféricos para jugar</h1>
+        <h1 class="titulo_main" id="perifericos">Periféricos para jugar</h1>
         <div class="container tarjetas">
 
           <div class="card card-main" style="width: 20rem;">
@@ -135,7 +133,7 @@
         </div>
 
         <div class="container resumen">
-          <div class="titulo-resumen">
+          <div class="titulo-resumen" id="informacion">
             <h3>¿Periféricos gamer?</h3>
           </div>
           <div class="texto-info">
@@ -150,7 +148,7 @@
 
 
         <div class="container resumen">
-          <div class="titulo-info">
+          <div class="titulo-info" id="comprar">
             <h3>Donde comprar periféricos gamers?</h3>
           </div>
           <div class="texto-main">
@@ -197,8 +195,8 @@
             </div>
           </div>
 
-          <div class="ad d-flex justify-content-center align-items-center">
-            <a href="#"><img src="IMG/ad2.jpg" width="300px" height="300"></a>
+          <div class="ad-aside">
+            <a href="#"><img class="img-ad" src="IMG/ad2.jpg" width="300px" height="300px"></a>
           </div>
 
 
@@ -214,29 +212,29 @@
     <div class="ad container hidden-xs">
       <div class="row">
         <div class="AD col-md-12 d-flex align-items-center justify-content-center">
-          <img class="" src="IMG/anuncios.jpg" alt="">
+          <img class="img-ad" src="IMG/anuncios.jpg" alt="">
         </div>
       </div>
     </div>
 
 
-    <div class="links">
-      <div class="container">
+    <div class="menu">
+      <div class="container-fluid">
         <div class="row">
           <ul class="links">
             <li>
-              <a href="#">Inicio</a>
+              <a href="#inicio">Inicio</a>
             </li>
             <li>
-              <a href="#">Periféricos</a>
+              <a href="#perifericos">Periféricos</a>
             </li>
             <li>
-              <a href="#">Información</a>
+              <a href="#informacion">Información</a>
             </li>
           </ul>
-          <div class="infoCopy">
-            <p class="copy">Copyright Nicolas Flores 2024</p>
-          </div>
+        </div>
+        <div class="infoCopy">
+          <p class="copy">Copyright Nicolas Flores 2024</p>
         </div>
       </div>
     </div>
