corrected top margin in single

--- a/single.html
+++ b/single.html
@@ -51,9 +51,7 @@
   <div class="container main-single" id="Perifericos">
     <div class="row justify-content-center">
       <section class="main justify-content-center col-12 col-lg-8">
-        <div class="container tarjetas">
-
-
+        <div class="container tarjetas single">
           <div class="card col-sm-12">
             <img src="IMG/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
